// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render component with one item 1`] = `
<nav
  className="subnav-tbar subnav-tbar-primary tbar tbar-inline-xs-down"
>
  <div
    className="container-fluid container-fluid-max-xl"
  >
    <ul
      className="tbar-nav tbar-nav-wrap"
    >
      <li
        className="tbar-item tbar-item-expand"
      >
        <div
          className="tbar-section"
        >
          <span
            className="component-text text-truncate-inline"
          >
            <span
              className="text-truncate"
            >
              x-result-for-x
            </span>
          </span>
        </div>
      </li>
      <li
        className="tbar-item"
      >
        <div
          className="tbar-section"
        >
          <a
            className="component-link tbar-link"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span>
              clear-all
            </span>
          </a>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Should render component with one list item 1`] = `
<nav
  className="subnav-tbar subnav-tbar-primary tbar tbar-inline-xs-down"
>
  <div
    className="container-fluid container-fluid-max-xl"
  >
    <ul
      className="tbar-nav tbar-nav-wrap"
    >
      <li
        className="tbar-item tbar-item-expand"
      >
        <div
          className="tbar-section"
        >
          <span
            className="component-text text-truncate-inline"
          >
            <span
              className="text-truncate"
            >
              x-results-for-x
            </span>
          </span>
        </div>
      </li>
      <li
        className="tbar-item"
      >
        <div
          className="tbar-section"
        >
          <a
            className="component-link tbar-link"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span>
              clear-all
            </span>
          </a>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;
